adding testimonial section in

--- a/index.html
+++ b/index.html
@@ -159,66 +159,58 @@
         <p class="head_line">Trusted by Thousands of Happy Customers &#128522;</p>
 
         <!--given reviews-->
-        <div class="testmonials" style="margin-top: 4rem;">
-            <div class="inner">
-                <div class="t_row">
-                    <div class="t_col">
-                        <div class="testmonial">
-                            <img src="assets/R1.png" alt="R1">
-                            <div class="name">Daniel Sprouse</div>
-                            <span style="color: #606060;">Director, Trucking.com</span>
-                            <div class="stars">
-                                <i class="fa-solid fa-star" style="color: #fdcb16;"></i>
-                                <i class="fa-solid fa-star" style="color: #fdcb16;"></i>
-                                <i class="fa-solid fa-star" style="color: #fdcb16;"></i>
-                                <i class="fa-solid fa-star" style="color: #fdcb16;"></i>
-                                <i class="fa-regular fa-star"></i><br>
+        <div class="row">
+            <div class="column5">
+                <div class="p-slides">
+                    <a class="ap-details" href="#slide-1">
+                        <div class="p-details">
+                            <div class="p-info">
+                                <img src="assets/R1.png" style="width: 50px;height: 50px;" alt="">
                             </div>
-                            <h3>It was a Wonderful Experience!</h3><br>
-                            <p>"Wow... I am very happy to use this VPN, it turned out to be
-                                more than my expectations and so far there have been no
-                                problems. LaslesVPN always the best”.</p>
-                        </div>
-                    </div>
-
-                    <div class="t_col">
-                        <div class="testmonial">
-                            <img src="assets/R2.png" alt="R1">
-                            <div class="name">Jonathan Anderson</div>
-                            <span style="color: #606060;">Insurance Manager, Fillio.co</span>
-                            <div class="stars">
-                                <i class="fa-solid fa-star" style="color: #fdcb16;"></i>
-                                <i class="fa-solid fa-star" style="color: #fdcb16;"></i>
-                                <i class="fa-solid fa-star" style="color: #fdcb16;"></i>
-                                <i class="fa-solid fa-star" style="color: #fdcb16;"></i>
-                                <i class="fa-solid fa-star" style="color: #fdcb16;"></i><br>
+                            <div class="p-detail">
+                                <h2>Kunal PArkar</h2>
+                                <span>A3.pvt</span>
                             </div>
-                            <h3>It was a Wonderful Experience!</h3><br>
-                            <p>"Wow... I am very happy to use this VPN, it turned out to be
-                                more than my expectations and so far there have been no
-                                problems. LaslesVPN always the best”.</p>
                         </div>
-                    </div>
-
-                    <div class="t_col">
-                        <div class="testmonial">
-                            <img src="assets/R3.png" alt="R1">
-                            <div class="name">Devi Singh</div>
-                            <span style="color: #606060;">Driver, 16wheels.co</span>
-                            <div class="stars">
-                                <i class="fa-solid fa-star" style="color: #fdcb16;"></i>
-                                <i class="fa-solid fa-star" style="color: #fdcb16;"></i>
-                                <i class="fa-solid fa-star" style="color: #fdcb16;"></i>
-                                <i class="fa-regular fa-star"></i>
-                                <i class="fa-regular fa-star"></i><br>
+                    </a>
+    
+                    <a class="ap-details" href="#slide-2">
+                        <div class="p-details">
+                            <div class="p-info">
+                                <img src="assets/R2.png" style="width: 50px;height: 50px;" alt="">
                             </div>
-                            <h3>It was a Wonderful Experience!</h3><br>
-                            <p>"Wow... I am very happy to use this VPN, it turned out to be
-                                more than my expectations and so far there have been no
-                                problems. LaslesVPN always the best”.</p>
+                            <div class="p-detail">
+                                <h2>Kushal parkar</h2>
+                                <span>A4.pvt</span>
+                            </div>
                         </div>
-                    </div>
+                    </a>
+    
+                    <a class="ap-details" href="#slide-3">
+                        <div class="p-details">
+                            <div class="p-info">
+                                <img src="assets/R3.png" style="width: 50px;height: 50px;" alt="">
+                            </div>
+                            <div class="p-detail">
+                                <h2>ananya shetty</h2>
+                                <span>A5.pvt</span>
+                            </div>
+                        </div>
+                    </a>
                 </div>
+            </div>
+            <div class="column6">
+                <div class="slides">
+                    <div id="slide-1">
+                      1
+                    </div>
+                    <div id="slide-2">
+                      2
+                    </div>
+                    <div id="slide-3">
+                      3
+                    </div>
+                  </div>
             </div>
         </div>
         <!---->
