--- a/index.html
+++ b/index.html
@@ -346,10 +346,12 @@
                 <div class="column fb_links">
                     <h3 class="fb_disc">Social</h3><!--social media links-->
                     <hr class="fb_seprator" style="border-top: 2px solid black;">
-                    <span><a href="">Instagram</a></span>
-                    <span><a href="">Facebook</a></span>
-                    <span><a href="">LinkedIn</a></span>
-                    <span><a href="">Twitter</a></span>
+                    <ul>
+                        <li><a href="">Instagram</a></li>
+                        <li><a href="">Facebook</a></li>
+                        <li><a href="">LinkedIn</a></li>
+                        <li><a href="">Twitter</a></li>
+                    </ul>
                 </div>
             </div>
 
@@ -358,10 +360,12 @@
                 <div class="column fb_links">
                     <h3 class="fb_disc">Social</h3>
                     <hr class="fb_seprator" style="border-top: 2px solid black;">
-                    <span><a href="">Instagram</a></span>
-                    <span><a href="">Facebook</a></span>
-                    <span><a href="">LinkedIn</a></span>
-                    <span><a href="">Twitter</a></span>
+                    <ul>
+                        <li><a href="">Instagram</a></li>
+                        <li><a href="">Facebook</a></li>
+                        <li><a href="">LinkedIn</a></li>
+                        <li><a href="">Twitter</a></li>
+                    </ul>
                 </div>
 
                 <div class="column">
