adding review section

--- a/index.html
+++ b/index.html
@@ -250,13 +250,49 @@
             <div class="column6">
                 <div class="slides">
                     <div id="slide-1">
-                        1
+                        <div class="slide">
+                            <h3>It was a Wonderful Experience!</h3>
+                            <div class="stars">
+                              <span><i class="fa-solid fa-star" style="color: #ffcc17;"></i></span>
+                              <span><i class="fa-solid fa-star" style="color: #ffcc17;"></i></span>
+                              <span><i class="fa-solid fa-star" style="color: #ffcc17;"></i></span>
+                              <span><i class="fa-solid fa-star" style="color: #ffcc17;"></i></span>
+                              <span><i class="fa-solid fa-star" style="color: #ffcc17;"></i></span>
+                            </div>
+                            <p>“Wow... I am very happy to use this VPN, it turned out to be
+                                more than my expectations and so far there we have been no problems.
+                                LaslesVPN always the best."</p>
+                          </div>
                     </div>
                     <div id="slide-2">
-                        2
+                        <div class="slide">
+                            <h3>It was a Wonderful Experience!</h3>
+                            <div class="stars">
+                              <span><i class="fa-solid fa-star" style="color: #ffcc17;"></i></span>
+                              <span><i class="fa-solid fa-star" style="color: #ffcc17;"></i></span>
+                              <span><i class="fa-solid fa-star" style="color: #ffcc17;"></i></span>
+                              <span><i class="fa-regular fa-star"></i></span>
+                              <span><i class="fa-regular fa-star"></i></span>
+                            </div>
+                            <p>“Wow... I am very happy to use this VPN, it turned out to be
+                                more than my expectations and so far there we have been no problems.
+                                LaslesVPN always the best."</p>
+                          </div>
                     </div>
                     <div id="slide-3">
-                        3
+                        <div class="slide">
+                            <h3>It was a Wonderful Experience!</h3>
+                            <div class="stars">
+                              <span><i class="fa-solid fa-star" style="color: #ffcc17;"></i></span>
+                              <span><i class="fa-solid fa-star" style="color: #ffcc17;"></i></span>
+                              <span><i class="fa-solid fa-star" style="color: #ffcc17;"></i></span>
+                              <span><i class="fa-solid fa-star" style="color: #ffcc17;"></i></span>
+                              <span><i class="fa-regular fa-star"></i></span>
+                            </div>
+                            <p>“Wow... I am very happy to use this VPN, it turned out to be
+                                more than my expectations and so far there we have been no problems.
+                                LaslesVPN always the best."</p>
+                          </div>
                     </div>
                 </div>
             </div>
