changing presons name section

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                     <a class="ap-details" href="#slide-1">
                         <div class="p-details">
                             <div class="p-info">
-                                <img src="assets/R1.png" style="width: 50px;height: 50px;" alt="">
+                                <img src="assets/R1.png" alt="">
                             </div>
                             <div class="p-detail">
                                 <h2>Daniel Sprouse</h2>
@@ -221,7 +221,7 @@
                     <a class="ap-details" href="#slide-2">
                         <div class="p-details">
                             <div class="p-info">
-                                <img src="assets/R2.png" style="width: 50px;height: 50px;" alt="">
+                                <img src="assets/R2.png" alt="">
                             </div>
                             <div class="p-detail">
                                 <h2>Jonathan Anderson</h2>
@@ -237,7 +237,7 @@
                     <a class="ap-details" href="#slide-3">
                         <div class="p-details">
                             <div class="p-info">
-                                <img src="assets/R3.png" style="width: 50px;height: 50px;" alt="">
+                                <img src="assets/R3.png" alt="">
                             </div>
                             <div class="p-detail">
                                 <h2>Devi Singh</h2>
