changing font size

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <!--hero section-->
     <section id="hero">
-        <p class="head_line">FASTEST & EASIEST WAY TO GET A INSURANCE</p>
+        <p class="head_line"><b>FASTEST & EASIEST WAY TO GET A INSURANCE</b></p>
 
         <div class="row hero">
             <div class="column1">
@@ -357,7 +357,7 @@
         <div class="footer">
             <div class="row top_row">
                 <div class="column">
-                    <img style="filter: invert(1);" src="assets/f_logo.png" alt="logo">
+                    <a href="index.html"><img style="filter: invert(1);" src="assets/f_logo.png" alt="logo"></a>
                     <h3 style="padding-top: 35px;">Fastest & Easiest way to get your
                         insurance</h3>
                 </div>
