adding php file

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <!--contact_us-->
                 <div class="row">
                     <div class="card contact_us">
-                        <form class="input-icons">
+                        <form class="input-icons" action="connect.php">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -95,7 +95,7 @@
                                     fill="black" />
                             </svg>
 
-                            <input type="text" placeholder="Enter your Name">
+                            <input type="text" placeholder="Enter your Name" name="pName">
                             <svg width="18" height="18" viewBox="0 0 18 18" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -103,7 +103,7 @@
                                     fill="black" />
                             </svg>
 
-                            <input type="email" placeholder="Enter your Email-Address">
+                            <input type="email" placeholder="Enter your Email-Address" name="pEmail">
                             <input type="submit" value="Contact-us">
                         </form>
                     </div>
