updated code for php

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <!--contact_us-->
                 <div class="row">
                     <div class="card contact_us">
-                        <form class="input-icons" action="connect.php">
+                        <form class="input-icons" action="insert.php" method="post">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
