adding final php code for data base

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <!--contact_us-->
                 <div class="row">
                     <div class="card contact_us">
-                        <form class="input-icons" action="insert.php" method="post">
+                        <form class="input-icons" action="process_form.php" method="POST">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -104,7 +104,7 @@
                             </svg>
 
                             <input type="email" placeholder="Enter your Email-Address" name="pEmail">
-                            <input type="submit" value="Contact-us">
+                            <input type="submit" value="Contact-us" name="submit">
                         </form>
                     </div>
                 </div>
