adding meta tags

--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta property="og:locale" content="en_US">
+    <meta property="type" content="website">
+    <meta name="description" content="Mayflower Trucking Services - Providing insurance, permits, and accidental damage services for your moving needs.">
+    <meta name="keywords" content="Mayflower, trucking services, insurance, permits, accidental damage, moving services">
+    <meta name="author" content="Mayflower Trucking Services">
+    <meta name="robots" content="index, follow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>MAYFLOWER TRUCKING SERVICES</title>
 
     <link rel="icon" type="image/x-icon" href="assets/mayflowerlogo1 1logo.png">
