adding actual client details

--- a/index.html
+++ b/index.html
@@ -148,13 +148,7 @@
             <div class="column3">
                 <h1 class="head_line">About-us</h1>
                 <div class="row">
-                    <p class="about_p">Lorem ipsum dolor sit amet
-                        consectetur
-                        adipiscing elit Ut et massa mi. Aliquam in
-                        hendrerit urna. Pellentesque sit amet
-                        sapien fringilla, mattis ligula
-                        consectetur, ultrices., mattis ligula
-                        consectetur, ultrices.</p>
+                    <p class="about_p" style="text-align: justify;">Established in 2009, we started as a family-owned company that has consistently expanded our offerings driven by a singular mission to become the go to resource for independent truckers across all 48 states. Whether you're just starting your journey or have years of trucking behind you, we are adept at navigating the complex maze of regulatory and permit requirements that govern our industry.</p>
                 </div>
             </div>
             <div class="column4">
@@ -166,9 +160,10 @@
     <!--Services-->
     <section id="services">
         <h1 class="head_line">Services</h1>
-        <p class="service_para">Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in
-            hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices., mattis ligula
-            consectetur, ultrices.</p>
+        <p class="service_para" style="text-align: justify;">Driving on the open road is what you do best, and helping you do it efficiently is ours. Mayflower is your go-to resource, equipped with a wealth of knowledge and experience to help you navigate through the maze of state and federal regulations before your wheels start turning.
+            We offer top-tier services tailored to ensure you pay no more than what is absolutely necessary for permits and taxes - because we understand, every dollar counts to your bottom line.
+            Below, you'll find our most sought-after services. However, our expertise doesn't end there. If you have a trucking need, odds are, we have a solution. So why wait? Give us a call, and let's get your business moving forward together.
+            </p>
 
         <!--services give by us-->
         <div class="card-container">
