adding about page
this page contain what exactly mayflower is

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
     <title>MAYFLOWER TRUCKING SERVICES</title>
 
-    <link rel="icon" type="image/x-icon" href="assets/mayflowerlogo1 1logo.png">
+    <link rel="icon" type="image/x-icon" href="assets/mayflowerlogo.png">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
@@ -24,10 +24,10 @@
     <!--navbar-->
     <header>
         <div class="navbar">
-            <div class="logo"><a href="index.html"><img src="assets/mayflowerlogo1 1logo.png" alt="logo"></a></div>
+            <div class="logo"><a href="index.html"><img src="assets/mayflowerlogo.png" alt="logo"></a></div>
             <ul class="links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#about_us">About-us</a></li>
+                <li><a href="about.html">About-us</a></li>
                 <li><a href="#services">Services</a></li>
                 <li><a href="#help_desk">Contact</a></li>
             </ul>
@@ -40,7 +40,7 @@
         <!--responsive navbar view-->
         <div class="dropdown_menu">
             <li><a href="index.html">Home</a></li>
-            <li><a href="#about_us">About-us</a></li>
+            <li><a href="about.html">About-us</a></li>
             <li><a href="#services">Services</a></li>
             <li><a href="#help_desk">Contact</a></li>
             <li><a href="login_signin.html" class="login_btn">Log-in</a></li>
@@ -393,7 +393,7 @@
                     <h3>Company</h3><!--company details-->
                     <hr style="border-top: 2px solid black;">
                     <ul>
-                        <li><a href="#about_us">About-us</a></li>
+                        <li><a href="about.html">About-us</a></li>
                         <li><a href="#help_desk">Contact-us</a></li>
                         <li><a href="#reviews">Testimonial</a></li>
                     </ul>
