--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
             <ul class="links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About-us</a></li>
-                <li><a href="#services">Services</a></li>
+                <li><a href="services.html">Services</a></li>
                 <li><a href="#help_desk">Contact</a></li>
             </ul>
             <a href="login_signin.html" class="login_btn">Log-in</a>
@@ -32,7 +32,7 @@
         <div class="dropdown_menu">
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About-us</a></li>
-            <li><a href="#services">Services</a></li>
+            <li><a href="services.html">Services</a></li>
             <li><a href="#help_desk">Contact</a></li>
             <li><a href="login_signin.html" class="login_btn">Log-in</a></li>
         </div>
