--- a/login_signin.html
+++ b/login_signin.html
@@ -16,7 +16,7 @@
     <!--navbar-->
     <header>
         <div class="navbar">
-            <div class="logo"><a href="index.html"><img src="assets/mayflowerlogo1 1logo.png" alt="logo"></a></div>
+            <div class="logo"><a href="index.html"><img src="assets/mayflowerlogo.png" alt="logo"></a></div>
 
             <a href="index.html" class="login_btn">Back to Home</a>
             <div class="toggle_btn">
