service page head details

--- a/services.html
+++ b/services.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +11,7 @@
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
     <header>
         <div class="navbar">
@@ -35,6 +37,32 @@
             <li><a href="login_signin.html" class="login_btn">Log-in</a></li>
         </div>
     </header>
-    
+
+    <section class="sec1">
+        <div class="area" id="info">
+            <h1>
+                SERVICES
+            </h1>
+            <p>
+                Driving on the open road is what you do best, and helping you do it efficiently is ours. Mayflower is your
+                go-to resource, equipped with a wealth of knowledge and experience to help you navigate through the maze of
+                state and federal regulations before your wheels start turning.
+            </p>
+            <p>
+                Below, you'll find our most sought-after services. However, our expertise doesn't end there. If you have a
+                trucking need, odds are, we have a solution. So why wait? Give us a call, and let's get your business moving
+                forward together.
+            </p>
+            <p>
+                We offer top-tier services tailored to ensure you pay no more than what is absolutely necessary for permits
+                and taxes - because we understand, every dollar counts to your bottom line.
+            </p>
+        </div>
+        <div class="area">
+            <img class="truck" src="assets/service_truck.png" alt="truck">
+        </div>
+    </section>
+
 </body>
+
 </html>
