adding the section of accounting and tax

--- a/services.html
+++ b/services.html
@@ -44,23 +44,44 @@
                 SERVICES
             </h1>
             <p>
-                Driving on the open road is what you do best, and helping you do it efficiently is ours. Mayflower is your
-                go-to resource, equipped with a wealth of knowledge and experience to help you navigate through the maze of
+                Driving on the open road is what you do best, and helping you do it efficiently is ours. Mayflower is
+                your
+                go-to resource, equipped with a wealth of knowledge and experience to help you navigate through the maze
+                of
                 state and federal regulations before your wheels start turning.
             </p>
             <p>
-                Below, you'll find our most sought-after services. However, our expertise doesn't end there. If you have a
-                trucking need, odds are, we have a solution. So why wait? Give us a call, and let's get your business moving
+                Below, you'll find our most sought-after services. However, our expertise doesn't end there. If you have
+                a
+                trucking need, odds are, we have a solution. So why wait? Give us a call, and let's get your business
+                moving
                 forward together.
             </p>
             <p>
-                We offer top-tier services tailored to ensure you pay no more than what is absolutely necessary for permits
+                We offer top-tier services tailored to ensure you pay no more than what is absolutely necessary for
+                permits
                 and taxes - because we understand, every dollar counts to your bottom line.
             </p>
         </div>
         <div class="area">
             <img class="truck" src="assets/service_truck.png" alt="truck">
         </div>
+    </section>
+
+    <section class="sec2">
+        <h2>
+            ACCOUNTING & TAX SERVICES
+        </h2>
+        <p>
+            Operating a small business can be a roller coaster of challenges and victories. Recognizing this, Mayflower
+            dedicates significant resources to support the unique needs of small trucking businesses. We go beyond
+            managing your accounts - we're committed to ensuring you take advantage of every deduction you're eligible
+            for.
+        </p>
+        <p>
+            Our streamlined system places us at the forefront of the trucking industry, specializing in accounting and
+            tax services that take the weight off your shoulders.
+        </p>
     </section>
 
 </body>
