adding all the details services and also made it responsive

--- a/services.html
+++ b/services.html
@@ -266,7 +266,7 @@
                 </p>
             </div>
         </div>
-        <p>
+        <p class="last_p">
             Join forces with Mayflower today, and together, let's fuel your trucking business's success. The road awaits—let us handle the numbers.
         </p>
     </section>
