--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     <section id="services">
         <h1 class="head_line">Services</h1>
         <p class="service_para" style="text-align: justify;">Driving on the open road is what you do best, and helping you do it efficiently is ours. Mayflower is your go-to resource, equipped with a wealth of knowledge and experience to help you navigate through the maze of state and federal regulations before your wheels start turning.
-            We offer top-tier services tailored to ensure you pay no more than what is absolutely necessary for permits and taxes - because we understand, every dollar counts to your bottom line.
+            <br>We offer top-tier services tailored to ensure you pay no more than what is absolutely necessary for permits and taxes - because we understand, every dollar counts to your bottom line. <br>
             Below, you'll find our most sought-after services. However, our expertise doesn't end there. If you have a trucking need, odds are, we have a solution. So why wait? Give us a call, and let's get your business moving forward together.
             </p>
 
