--- a/services.html
+++ b/services.html
@@ -20,7 +20,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About-us</a></li>
                 <li><a href="#services">Services</a></li>
-                <li><a href="#help_desk">Contact</a></li>
+                <li><a href="https://mayflowertruckpermits.com/index.html#help_desk">Contact</a></li>
             </ul>
             <a href="login_signin.html" class="login_btn">Log-in</a>
             <div class="toggle_btn">
@@ -33,7 +33,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About-us</a></li>
             <li><a href="#services">Services</a></li>
-            <li><a href="#help_desk">Contact</a></li>
+            <li><a href="https://mayflowertruckpermits.com/index.html#help_desk">Contact</a></li>
             <li><a href="login_signin.html" class="login_btn">Log-in</a></li>
         </div>
     </header>
@@ -311,7 +311,7 @@
                     <hr style="border-top: 2px solid black;">
                     <ul>
                         <li><a href="about.html">About-us</a></li>
-                        <li><a href="#help_desk">Contact-us</a></li>
+                        <li><a href="https://mayflowertruckpermits.com/index.html#help_desk">Contact-us</a></li>
                         <li><a href="#reviews">Testimonial</a></li>
                     </ul>
                 </div>
